--- a/src/components/dropdown_menu/style.css
+++ b/src/components/dropdown_menu/style.css
@@ -1,3 +1,7 @@
+.dropdownMenu {
+  width: 350px;
+}
+
 .dropdownButton {
   display: flex;
   justify-content: space-between;
@@ -6,6 +10,7 @@
 }
 
 .dropdownOptionsContainer {
+  text-align: left;
   display: flex;
   flex-direction: column;
   max-height: 300px;
@@ -32,6 +37,7 @@
 
 .optionChipsContainer {
   display: flex;
+  overflow: hidden;
   flex-wrap: wrap;
   flex-direction: row;
   row-gap: 5px;
@@ -51,7 +57,7 @@
   display: flex;
   font-size: small;
   column-gap: 5px;
-  padding: 5px 10px;
+  padding: 2px 10px;
   border-radius: 10px;
   background-color: #555555;
   white-space: nowrap;
